# coincore-cpp

./: .gitignore  README  README.md  conanfile.txt
conan_package/: .gitignore  base.py  conanfile.py  release_fetches_source.py  release_fetches_source_https.py  release_fetches_source_ssh.py  release_include_source.py
conan_package/test_package/: conanfile.py  example.cpp
example/: CMakeLists.txt  conanfile.txt  keygen.cpp
sources/: CMakeLists.txt
sources/src/: CoinNodeData.h  MerkleTree.cpp
